# needle

./: README.md  TODO.md  pyproject.toml
benchmarks/: bench_throughput.py
needle/: __init__.py  __main__.py  args.py  launch.py  llm.py
needle/backend/: __init__.py  backend.py  block_allocator.py  engine.py  io.py  message.py  scheduler.py  sequence.py
needle/distributed/: __init__.py  transport.py
needle/layers/: __init__.py  attention.py  linear.py  norm.py  rope.py
needle/model/: __init__.py  config.py  llama.py  loader.py  qwen2.py  runner.py  sampler.py
needle/serving/: __init__.py  client.py  protocol.py  server.py
needle/utils/: __init__.py  logging.py  memory.py  metrics.py
tests/integration/: test_llama_inference.py  test_tensor_parallel.py
tests/unit/: test_block_allocator.py  test_paged_attention.py  test_scheduler.py
tools/: debug.py  req.sh  run.sh
