[build-system]
requires = ["setuptools>=68", "wheel", "cmake>=3.18", "pybind11>=2.11"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "needle"
version = "0.1.0"
description = "Needle — sharp, lightweight LLM inference engine with Continuous Batching and PagedAttention"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["llm", "inference", "llama", "qwen", "cuda"]

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "safetensors>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
metrics = ["prometheus_client>=0.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",   # for FastAPI test client
]

[project.scripts]
needle = "needle.__main__:launch_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["needle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
